# Jupiter-flight-simulation

./: CMakeLists.txt  EuclideanNorm.cpp  LocalNorm.cpp  LocalNorm.h  Modyfied_Newton.cpp  Modyfied_Newton.h  README.md  RK4.cpp  RK4.h  Subfunction.cpp  Subfunction.h  constants.cpp  constants.h  gauss.cpp  gauss.h  iterSystemSolver.h  main.cpp  residuals.cpp  residuals.h
Modyfied_Newton/: EuclideanNorm.h  LocalNorm.cpp  Modyfied_Newton.cpp  Modyfied_Newton.h
RK4/: RK4.cpp  RK4.h
gauss/: gauss.h
iterSystemSolver/: iterSystemSolver.h
residuals/: residuals.cpp
